rbe/k8s/buildbarn/worker-arm64.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-arm64
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker
      instance: arm64
  template:
    metadata:
      labels:
        app: worker
        instance: arm64
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      nodeSelector:
        buildcluster/role: worker
        kubernetes.io/arch: arm64
      containers:
        - args:
            - /config/worker-arm64.jsonnet
          image: ghcr.io/buildbarn/bb-worker:20250411T124310Z-1c726bd
          name: worker
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
            - mountPath: /worker
              name: worker
        - command: [/bb/tini, -v, --, /bb/bb_runner, /config/runner.jsonnet]
          image: ghcr.io/rpostgres/rpostgres/debian-rbe-pgdeps@sha256:104c826449ce4419b19439b21c0534a99ccc11778be9a681504b605f6bc7d50e
          name: runner
          securityContext:
            runAsUser: 65534
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
            - mountPath: /worker
              name: worker
            - mountPath: /bb
              name: empty
              readOnly: true
      volumes:
        - name: empty
          emptyDir: {}
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: runner.jsonnet
                path: runner.jsonnet
              - key: worker.libsonnet
                path: worker.libsonnet
              - key: worker-arm64.jsonnet
                path: worker-arm64.jsonnet
        - emptyDir: {}
          name: worker
