rbe/k8s/buildbarn/browser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browser
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browser
  template:
    metadata:
      labels:
        app: browser
    spec:
      nodeSelector:
        buildcluster/role: other
      containers:
        - image: ghcr.io/buildbarn/bb-browser:20250414T180739Z-9b44996
          args:
            - /config/browser.jsonnet
          name: browser
          ports:
            - containerPort: 7984
              protocol: TCP
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
      volumes:
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: browser.jsonnet
                path: browser.jsonnet
---
apiVersion: v1
kind: Service
metadata:
  name: browser
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  ports:
    - port: 7984
      protocol: TCP
      name: http
  selector:
    app: browser
  type: ClusterIP
