rbe/k8s/buildbarn/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      nodeSelector:
        buildcluster/role: other
      containers:
        - args:
            - /config/frontend.jsonnet
          image: ghcr.io/buildbarn/bb-storage:20250408T112116Z-1d733a3
          name: storage
          ports:
            - containerPort: 8980
              protocol: TCP
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
      volumes:
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: frontend.jsonnet
                path: frontend.jsonnet
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
  name: frontend
  namespace: buildbarn
spec:
  ports:
    - port: 8980
      protocol: TCP
      name: grpc
  selector:
    app: frontend
  type: ClusterIP
