rbe/k8s/buildbarn/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler-ubuntu22-04
  namespace: buildbarn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
      instance: ubuntu22-04
  template:
    metadata:
      labels:
        app: scheduler
        instance: ubuntu22-04
    spec:
      nodeSelector:
        buildcluster/role: other
      containers:
        - args:
            - /config/scheduler.jsonnet
          image: ghcr.io/buildbarn/bb-scheduler:20250411T124310Z-1c726bd
          name: scheduler
          ports:
            - containerPort: 8982
              protocol: TCP
            - containerPort: 8983
              protocol: TCP
            - containerPort: 7982
              protocol: TCP
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
      volumes:
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: scheduler.jsonnet
                path: scheduler.jsonnet
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler
  namespace: buildbarn
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
spec:
  ports:
    - port: 8982
      protocol: TCP
      name: client-grpc
    - port: 8983
      protocol: TCP
      name: worker-grpc
    - port: 7982
      protocol: TCP
      name: http
  selector:
    app: scheduler
    instance: ubuntu22-04
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: scheduler-browser
  namespace: buildbarn
spec:
  ports:
    - port: 7982
      protocol: TCP
      name: http
  selector:
    app: scheduler
    instance: ubuntu22-04
  type: ClusterIP
