rbe/k8s/buildbarn/storage.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: storage
  namespace: buildbarn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage
  serviceName: storage
  template:
    metadata:
      labels:
        app: storage
    spec:
      nodeSelector:
        buildcluster/role: storage
      containers:
        - args:
            - /config/storage.jsonnet
          image: ghcr.io/buildbarn/bb-storage:20250408T112116Z-1d733a3
          name: storage
          ports:
            - containerPort: 8981
              protocol: TCP
          volumeMounts:
            - mountPath: /config/
              name: configs
              readOnly: true
            - mountPath: /storage-cas
              name: cas
            - mountPath: /storage-ac
              name: ac
      volumes:
        - name: configs
          configMap:
            name: buildbarn-config
            items:
              - key: common.libsonnet
                path: common.libsonnet
              - key: storage.jsonnet
                path: storage.jsonnet
  volumeClaimTemplates:
    - metadata:
        name: cas
      spec:
        storageClassName: gp2
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 33Gi
    - metadata:
        name: ac
      spec:
        storageClassName: gp2
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "80"
    prometheus.io/scrape: "true"
  name: storage
  namespace: buildbarn
spec:
  clusterIP: None
  ports:
    - port: 8981
      protocol: TCP
      name: grpc
    - port: 9980
      protocol: TCP
      name: http
  selector:
    app: storage
